# tungtung

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER.md  README.md  README_QUICKSTART.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_e2e.py
common/: ai.py  config.py  crypto.py  database.py  farm.py  files.py  links.py  logging.py  models.py  queue.py  runtime.py
core/: bootstrap.py  loop_controller.py  orchestrator.py  scheduler.py  tasks.py  worker.py
modules/ai/: analyzer.py  client.py  fun_writer.py  writer.py
modules/memory/: compactor.py  daily_planner.py  improvement_updater.py
modules/meta/: monitor.py  publisher.py  session_manager.py
modules/meta/drivers/: __init__.py  base.py  cookie_page.py  cookie_profile.py  cookie_utils.py  graph_api.py
modules/revenue/: auto_scaler.py  conversion_funnel.py  engagement_booster.py  flash_sale.py  hashtag_optimizer.py  tracker.py  window_optimizer.py
modules/shopee/: affiliate_api.py  cookie_affiliate.py  crawler.py  proxy_pool.py  proxy_scraper.py  rate_limiter.py
tests/: test_affiliate_api.py  test_ai_budget.py  test_ai_client.py  test_daily_planner.py  test_database.py  test_farm.py  test_links.py  test_meta_drivers.py  test_queue_local.py  test_rate_limiter.py  test_runtime_config.py  test_session_manager.py  test_writer.py
web/: main.py
web/static/: styles.css
web/templates/: activity.html  chat.html  config.html  editor.html  index.html  posts.html
